<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.twitter.dpr.event.MainActivity">

    <item
        android:id="@+id/action_search_tweet"
        android:title="@string/menu_search_tweet"
        app:showAsAction="ifRoom"
        android:icon="@drawable/search" />
    <item
        android:id="@+id/action_create_tweet"
        android:title="@string/menu_create_tweet"
        app:showAsAction="ifRoom"
        android:icon="@drawable/write" />

    <item
        android:id="@+id/action_follow"
        android:title="@string/menu_follow"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_action_social_person_add" />

    <item android:id="@+id/action_share_handle"
        android:title="@string/menu_share_handle"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_action_action_assignment_ind" />

    <item android:id="@+id/action_account_to_follow"
        android:title="@string/menu_account_to_follow"
        android:orderInCategory="98"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/menu_about"
        android:orderInCategory="99"
        app:showAsAction="never" />

    <item android:id="@+id/action_sign_out"
        android:title="@string/menu_sign_out"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
