<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.twitter.dpr.event.ShareHandleActivity">

    <ImageView
        android:id="@+id/qrcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/messageTextView"
        android:layout_below="@+id/instructionsTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/qrcode_margin"
        android:layout_marginTop="@dimen/qrcode_margin"
        android:contentDescription="@string/qrcode_label"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/instructions"
        android:id="@+id/instructionsTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/message"
        android:id="@+id/messageTextView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
